# ChangeLog for gentoo/src/catalyst 
# Copyright 2002-2004 Gentoo Technologies, Inc.; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo/src/catalyst/ChangeLog,v 1.72 2004/07/14 17:23:16 zhen Exp $

  14 Jul 2004; John Davis <zhen@gentoo.org>
  livecd/runscript-support/livecdfs-update.sh,
  modules/generic_stage_target.py, modules/livecd_stage2_target.py:
  fixed a bug for livecd-stage2. somehow, the inheritance got mucked up and the
  livecds were not cleaning out livecd/empty livecd/rm etc. I moved the code for
  this out of generic_stage_target and into livecd-stage2 since the
  livecd-stage2 class was overriding generic_stage_target for cleaning anyway.

  13 Jul 2004; <zhen@gentoo.org> livecd/runscript-support/livecdfs-update.sh:
  changed the behavior of rcadd/ rcdel. it was getting hokey to have to add the
  default rc'ed programs when only one change was required to rcadd. so I
  changed it so that the defaults are *always* loaded and specified additions/
  deletions are just added on top of those.

  12 Jul 2004; John Davis <zhen@gentoo.org> catalyst,
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/stage1/stage1-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/tinderbox/tinderbox-chroot.sh:
  changing the more verbose behavior to the -V (verbose) flag

  12 Jul 2004; <zhen@gentoo.org> catalyst,
  targets/embedded/embedded-chroot.sh, targets/grp/grp-chroot.sh,
  targets/livecd-stage1/livecd-stage1-chroot.sh,
  targets/stage1/stage1-chroot.sh, targets/stage3/stage3-chroot.sh,
  targets/tinderbox/tinderbox-chroot.sh:
  the -d (debug) flag now makes catalyst calculate an emerge -vp of the packages
  it is about to merge so that deps and USE flags are more evident

  11 Jul 2004; <zhen@gentoo.org> +catalyst, -catalyst.new.py,
  modules/catalyst_support.py:
  completely rewrote the catalyst main script so that it can actually utilize