@@ -1,0 +1,9 @@
+#!/bin/bash
+
+if [ -e /usr/X11R6/bin/X ]; then
+	if [ -e /etc/startx ]; then
+		rm -f /etc/startx
+		startx
+		cat /etc/motd
+	fi
+fi
