@@ -1,19 +1,0 @@
-#!/sbin/runscript
-# Copyright 1999-2003 Gentoo Technologies, Inc.
-# Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/files/Attic/livecd-rclocal,v 1.1 2004/05/12 21:19:34 zhen Exp $
-
-depend() {
-	after *
-}
-
-start() {
-	ebegin "Auto-scrambling root password for security"
-	echo root:\`pwgen -s 16\` | chpasswd  > /dev/null 2>&1
-	eend $? "Failed to start local."
-}
-
-stop() {
-	ebegin "Stopping local"
-	eend $? "Failed to stop local."
-}
