@@ -1,7 +1,7 @@
 #!/bin/bash
 # Copyright 1999-2004 Gentoo Technologies, Inc.
 # Distributed under the terms of the GNU General Public License v2
-# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript-support/Attic/kmerge.sh,v 1.7 2004/06/13 15:48:51 zhen Exp $
+# $Header: /var/cvsroot/gentoo/src/catalyst/livecd/runscript-support/Attic/kmerge.sh,v 1.8 2004/07/21 05:03:42 zhen Exp $
 
 die() {
 	echo "$1"
@@ -48,24 +48,29 @@ SUB=`grep ^SUBLEVEL\ \= /usr/src/linux/Makefile | awk '{ print $3 };'`
 EXV=`grep ^EXTRAVERSION\ \= /usr/src/linux/Makefile | sed -e "s/EXTRAVERSION =//" -e "s/ //g"`
 clst_fudgeuname=${VER}.${PAT}.${SUB}${EXV}
 
-if [ -n "${clst_livecd_bootsplash}" ]
-then
-	genkernel --bootsplash=${clst_livecd_bootsplash} ${clst_livecd_gk_mainargs} ${clst_livecd_gk_kernargs} --kerneldir=/usr/src/linux --kernel-config=/var/tmp/${clst_kname}.config --minkernpackage=/tmp/binaries/${clst_kname}.tar.bz2 all || exit 1
-else
-	genkernel ${clst_livecd_gk_mainargs} ${clst_livecd_gk_kernargs} --kerneldir=/usr/src/linux --kernel-config=/var/tmp/${clst_kname}.config --minkernpackage=/tmp/binaries/${clst_kname}.tar.bz2 all || exit 1
-fi
-
-${genkernel} 
-#now we merge any kernel-dependent packages
+# now we merge any kernel-dependent packages
 if [ -e "/var/tmp/${clst_kname}.packages" ]
 then
 	for x in $( cat /var/tmp/${clst_kname}.packages )
 	do
 		# we don't want to use the pkgcache for these since the results
 		# are kernel-dependent.
-		emerge "$x"
-		/sbin/modules-update --assume-kernel=${clst_fudgeuname}
+		clst_kernel_merge="${clst_kernel_merge} ${x}"
 	done
+fi
+
+if [ -n "${clst_livecd_bootsplash}" ]
+then
+	genkernel --bootsplash=${clst_livecd_bootsplash} \
+		--callback="emerge ${clst_kernel_merge}" ${clst_livecd_gk_mainargs} \
+		${clst_livecd_gk_kernargs} --kerneldir=/usr/src/linux \
+		--kernel-config=/var/tmp/${clst_kname}.config \
+		--minkernpackage=/tmp/binaries/${clst_kname}.tar.bz2 all || exit 1
+else
+	genkernel --callback="emerge ${clst_kernel_merge}" \
+		${clst_livecd_gk_mainargs} ${clst_livecd_gk_kernargs} \
+		--kerneldir=/usr/src/linux --kernel-config=/var/tmp/${clst_kname}.config \
+		--minkernpackage=/tmp/binaries/${clst_kname}.tar.bz2 all || exit 1
 fi
 
 /sbin/modules-update --assume-kernel=${clst_fudgeuname}
